--- a/app.json
+++ b/app.json
@@ -1,21 +1,21 @@
 {
-  "name": "Esther Bot",
-  "description": "Esther, bot.",
-  "keywords": ["esther", "bot", "express"],
-  "website": "https://estherbot.com",
-  "repository": "https://github.com/esthercrawford/smooch-bot-example",
-  "logo": "http://www.estherbot.com/wp-content/uploads/2016/03/EstherBot-photo.png",
+  "name": "GFY Bot",
+  "description": "GameForYou, bot.",
+  "keywords": ["game", "bot", "for you"],
+  "website": "https://gameforyou.herokuapp.com/",
+  "repository": "https://github.com/Chaslav/GFYbot/",
+  "logo": "http://s32.postimg.org/fcfarlpk1/gfy_logo.jpg",
   "env": {
     "SMOOCH_APP_TOKEN": {
-      "description": "Your Smooch app token which is used to initialize the web widget.",
+      "description": "82lau7qiqjib26ae3ohbsvce8",
       "required": true
     },
     "SMOOCH_KEY_ID": {
-      "description": "Your Smooch key ID, used to talk to the Smooch API",
+      "description": "app_57188609719a674300d3b3bb",
       "required": true
     },
     "SMOOCH_SECRET": {
-      "description": "Your Smooch secret, used to talk to the Smooch API",
+      "description": "UhxE-zkj07VCO6hCjekkjkD0",
       "required": true
     }
   }
