--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "smooch-bot-example",
+  "name": "GFY Bot",
   "version": "1.0.0",
-  "description": "Smooch Bot Example Apps",
-  "author": "Andrew Lavers <alavers@system42.net> (http://smooch.io/)",
+  "description": "GameForYou, a bot that recommedns games.",
+  "author": "Milan Jerkovic",
   "scripts": {
     "start": "node heroku"
   },
@@ -13,7 +13,7 @@
     "hbs": "^4.0.0",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.6.1",
-    "smooch-bot": "https://github.com/skhavari/smooch-bot.git",
+    "smooch-bot": "https://github.com/Chaslav/GFYbot/",
     "smooch-core": "^1.1.1"
   },
   "devDependencies": {
