--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "GFY",
+    "name": "smooch-bot-example",
   "version": "1.0.0",
-  "description": "GameForYou, a bot that recommends games.",
-  "author": "Milan Jerkovic",
+  "description": "Smooch Bot Example Apps",
+  "author": "Andrew Lavers <alavers@system42.net> (http://smooch.io/)",
   "scripts": {
     "start": "node heroku"
   },
@@ -13,7 +13,7 @@
     "hbs": "^4.0.0",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.6.1",
-    "smooch-bot": "https://github.com/Chaslav/GFYbot/",
+    "smooch-bot": "https://github.com/skhavari/smooch-bot.git",
     "smooch-core": "^1.1.1"
   },
   "devDependencies": {
@@ -25,5 +25,5 @@
     "esformatter-dot-notation": "^1.3.1",
     "esformatter-quotes": "^1.0.3",
     "eslint": "^2.2.0"
-  }
+ }
 }
